--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,7 +199,7 @@ jobs:
           POSTGRES_PASSWORD: passw0rd
     environment:
       SCRAPYDWEB_TESTMODE: True
-      DATABASE_URL: 'postgres://circleci:fakepassword@localhost:5432'
+      DATABASE_URL: 'postgresql://circleci:fakepassword@localhost:5432'
   py27-mysql:
     <<: *test-template
     docker:
