--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ flask>=1.0.2
 flask-compress>=1.4.0
 Flask-SQLAlchemy>=2.3.2
 logparser==0.8.2
+numpy>=1.21.2
+pandas>=1.3.2
+plotly>=5.3.0 
 requests>=2.21.0
 setuptools>=40.6.3
 six>=1.12.0
