ci: Custom scrapydweb image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.9-slim
-ADD . /app
+
 WORKDIR /app
 
-EXPOSE 5000
+COPY ../ /app/scrapydweb_pkg
+
 RUN apt-get update && \ 
   apt-get install -y git && \
-  pip3 install -U git+https://github.com/my8100/scrapydweb.git && \
-  apt-get remove -y git
+  pip3 install /app/scrapydweb_pkg && 
+
 CMD scrapydweb
