ci: running scrapydweb in docker with uwsgi

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,18 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ../ /app/scrapydweb_pkg
+COPY . /app/scrapydweb_pkg
+
+RUN ls -al /app
 
 RUN apt-get update && \ 
-  apt-get install -y git && \
-  pip3 install /app/scrapydweb_pkg && 
+  apt-get install -y git gcc && \
+  pip3 install -r /app/scrapydweb_pkg/requirements.txt && \ 
+  pip3 install /app/scrapydweb_pkg
 
-CMD scrapydweb
+RUN mkdir /app/scrapyd_server
+RUN chmod +x /app/scrapydweb_pkg/launcher.sh 
+
+CMD ["sh", "/app/scrapydweb_pkg/launcher.sh"]
+
+
