ci: changed project dir for ci

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && \
   pip3 install /app/scrapydweb_pkg
 
 RUN mkdir /app/scrapyd_server
+RUN mkdir /app/scrapyd_server/projects
 RUN chmod +x /app/scrapydweb_pkg/launcher.sh 
 
 CMD ["sh", "/app/scrapydweb_pkg/launcher.sh"]
