ci: build image in non-root user

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,16 @@
 FROM python:3.9-slim
 
+RUN apt-get update && apt-get install -y git gcc 
+
 WORKDIR /app
 
-COPY . /app/scrapydweb_pkg
+RUN groupadd -r docker && useradd --no-log-init -r -g docker dockeruser
+USER dockeruser
 
-RUN ls -al /app
+COPY --chown=dockeruser:docker . /app/scrapydweb_pkg
 
-RUN apt-get update && \ 
-  apt-get install -y git gcc && \
-  pip3 install -r /app/scrapydweb_pkg/requirements.txt && \ 
+
+RUN pip3 install -r /app/scrapydweb_pkg/requirements.txt && \ 
   pip3 install /app/scrapydweb_pkg
 
 RUN mkdir /app/scrapyd_server
