ci: add custom settings for doors

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,17 +4,16 @@ WORKDIR /app
 
 COPY . /app/scrapydweb_pkg
 
-RUN apt-get update && apt-get install -y git gcc 
-
-RUN pip3 install -r /app/scrapydweb_pkg/requirements.txt && \ 
+RUN apt-get update && apt-get install -y git gcc && \
+  pip3 install -r /app/scrapydweb_pkg/requirements.txt && \ 
   pip3 install /app/scrapydweb_pkg
 
 RUN mkdir /app/scrapyd_server
 RUN mkdir /app/scrapyd_server/projects
-RUN chmod +x /app/scrapydweb_pkg/launcher.sh 
 
-# RUN groupadd -r docker && useradd --no-log-init -r -g docker dockeruser
-# USER dockeruser
+RUN cp /app/scrapydweb_pkg/doors_settings.py /app/scrapyd_server/scrapydweb_settings_v10.py
+
+RUN chmod +x /app/scrapydweb_pkg/launcher.sh 
 
 CMD ["sh", "/app/scrapydweb_pkg/launcher.sh"]
 
