build: pre-compiled uwsgi to avoid compiling the wheel

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,7 @@ setuptools>=40.6.3
 six>=1.12.0
 SQLAlchemy>=1.2.15
 w3lib>=1.17.0
-uwsgi
+
+# uwsgi installed though apt install uwsgi-plugin-python3
+# to avoid compiling the  wheel
+# uwsgi
