--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,4 @@ six>=1.12.0
 SQLAlchemy>=1.2.15
 w3lib>=1.17.0
 
-# uwsgi installed though apt install uwsgi-plugin-python3
-# to avoid compiling the  wheel
-# uwsgi
+uwsgi
