ci: manual trigger of release wf in case daft-punk does not respond

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ on:
     branches: [ RELEASE ]
   release:
     types: [ created ]
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Why are your building manually ?'     
+        required: true
 
 jobs:
   build:
