ci: workflow based on master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: CI/CD
 
 on:
   push:
-    branches: [ monitoring ]
+    branches: [ master ]
   pull_request:
-    branches: [ monitoring ]
+    branches: [ master ]
 
 jobs:
   build:
