--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 pip>=19.1.1
-APScheduler>=3.5.3
-flask>=1.0.2
-flask-compress>=1.4.0
-Flask-SQLAlchemy>=2.3.2
+APScheduler==3.5.3
+click==7.0
+colorama==0.4.0
+Flask==1.0.2
+Flask-Compress==1.4.0
+Flask-SQLAlchemy==2.4.0
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10
 logparser==0.8.2
+MarkupSafe==1.1.1
+pexpect==4.7.0
+ptyprocess==0.6.0
+pytz==2018.9
 requests>=2.21.0
 setuptools>=40.6.3
-six>=1.12.0
-SQLAlchemy>=1.2.15
-w3lib>=1.17.0
+six==1.12.0
+SQLAlchemy==1.3.24
+tzlocal==1.5.1
+w3lib==1.19.0
+Werkzeug==0.14.1
