added SCRAPYD_SERVER HTTPS support

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ scrapydweb/data/demo_projects/ScrapydWeb_demo - 副本/*
 
 
 venv/
+.venv/
 
 *.pyc
 __pycache__/
@@ -44,3 +45,4 @@ build/
 *.egg-info/
 
 .idea
+.vscode/launch.json
