Test py312-scrapyd-v143 in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       is-py27:
         type: boolean
         default: false
+      use-scrapyd-v143:
+        type: boolean
+        default: false
       use-git:
         type: boolean
         default: false
@@ -125,6 +128,16 @@ jobs:
                   pip install -U git+https://github.com/scrapy/scrapy.git
                   pip install -U git+https://github.com/scrapy/scrapyd.git
                   pip install -U git+https://github.com/my8100/logparser.git
+                  pip list
+      - when:
+          condition: <<parameters.use-scrapyd-v143>>
+          steps:
+            - run:
+                name: scrapyd==1.4.3
+                command: |
+                  . venv/bin/activate
+                  pip list
+                  pip install scrapyd==1.4.3
                   pip list
       - run:
           name: Launch Scrapyd
@@ -253,6 +266,10 @@ jobs:
     <<: *test-template
     docker:
       - image: cimg/python:3.11
+  py312-scrapyd-v143:
+    <<: *test-template
+    docker:
+      - image: cimg/python:3.12
   py312:
     <<: *test-template
     docker:
@@ -262,8 +279,8 @@ workflows:
     jobs:
       # - py27:
       #    is-py27: true
-      - py36
-      - py37
+      # - py36
+      # - py37
       - py38
       - py39
       - py310-git-postgresql:
@@ -280,4 +297,6 @@ workflows:
       - py310-mysql:
           use-mysql: true
       - py311
+      - py312-scrapyd-v143:
+          use-scrapyd-v143: true
       - py312
