--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ APScheduler==3.6.0
 colorama==0.4.0
 Flask==2.2.5
 Flask-Compress==1.4.0
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy>=3.1.1
 logparser==0.8.2
 requests>=2.21.0
 w3lib==2.0.0
