--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
 pip>=19.1.1
 APScheduler==3.6.0
+click==7.1.2
 colorama==0.4.0
-Flask==2.2.5
+Flask==2.0.0
 Flask-Compress==1.4.0
-Flask-SQLAlchemy>=3.1.1
+Flask-SQLAlchemy==2.4.0
+idna==2.7
+itsdangerous==2.0.0
+Jinja2==3.0.0
 logparser==0.8.2
+MarkupSafe==2.0.0
+pexpect==4.7.0
+ptyprocess==0.6.0
+pytz==2018.9
 requests>=2.21.0
+setuptools>=40.6.3
+six==1.16.0
+SQLAlchemy==1.3.24
+tzlocal==1.5.1
 w3lib==2.0.0
+Werkzeug==2.0.0
